syntax="proto3";

package pb;

option go_package="./pkg/pb";

service UserService{
    rpc SignUp(SignUpRequest) returns (SignUpResponse){}
    rpc Login(LoginRequest) returns (LoginResponse){}
}

message SignUpRequest{
    string name=1;
    string email=2;
    string phno=3;
    string password=4;
}

message UserDetails{
    uint64 id=1;
    string name=2;
    string email=3;
    string phno=4;
}
message SignUpResponse{
    string token=1;
    UserDetails userdetails=2;
}

message LoginRequest{
    string email=1;
    string password=2;
}

message LoginResponse{
    string token=1;
    UserDetails userdetails=2;
}